Closed
Bug 761034
Opened 10 years ago
Closed 10 years ago
[D2D] graphical Glitches on Menu Popups
Categories
(Core :: Graphics, defect)
Tracking
()
VERIFIED
FIXED
mozilla16
People
(Reporter: xtc4uall, Assigned: roc)
References
Details
(Keywords: regression)
Attachments
(2 files)
54.05 KB,
image/png
|
Details | |
1.32 KB,
patch
|
akeybl
:
approval-mozilla-aurora+
akeybl
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
See Screenshot. The Glitches flicker as you move the Mouse around the Popups' Surface. Affected are Chrome and Content Popups like e.g. Firefox Button Menu, Bookmark Menu, <select>/<option> Popups. Disabling D2D e.g. via gfx.direct2d.disabled;true helps. Regression Windows: * mozilla-inbound: Last good nightly: 2012-04-15 First bad nightly: 2012-04-16 Pushlog: http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=6f44748aa046&tochange=61088f8aa842 * central: Last good nightly: 2012-04-16 First bad nightly: 2012-04-17 Pushlog: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=fd06332733e5&tochange=c61e7c3a232a => likely http://hg.mozilla.org/mozilla-central/rev/07f55ad76d8f (Bug 610713) => Firefox 14 and higher are affected. I'm running a Lenovo Notebook with NVIDIA Optimus. Adapter Description Intel(R) HD Graphics Vendor ID8086 Device ID0046 Adapter RAM Unknown Adapter Drivers igdumd64 igd10umd64 igdumdx32 igd10umd32 Driver Version 8.15.10.2622 Driver Date 1-10-2012 Adapter Description (GPU #2) NVIDIA GeForce 310M Vendor ID (GPU #2)10de Device ID (GPU #2)0a70 Adapter RAM (GPU #2)512 Adapter Drivers (GPU #2) nvd3dumx,nvwgf2umx,nvwgf2umx nvd3dum,nvwgf2um,nvwgf2um Driver Version (GPU #2) 8.17.13.142 Driver Date (GPU #2) 5-15-2012 Direct2D Enabled true DirectWrite Enabled true (6.1.7601.17789) ClearType Parameters ClearType parameters not found WebGL Renderer Blocked for your graphics card because of unresolved driver issues. GPU Accelerated Windows 1/1 Direct3D 10 AzureBackend direct2d
Comment 1•10 years ago
|
||
I'm surprised -not- accelerating causes issues here (as that's what that revision changed!)
Assignee | ||
Comment 2•10 years ago
|
||
We should back out the fix in bug 610713 since it didn't really fix anything for anyone as far as I can tell, and it seems to have caused this. Bas, do you agree?
![]() |
Reporter | |
Comment 3•10 years ago
|
||
Bas? :-) FWIW, I verified my Guess in Comment 0 using HG Bisect against MC: The first bad revision is: changeset: 91743:07f55ad76d8f user: Robert O'Callahan <robert@ocallahan.org> date: Tue Apr 10 11:52:50 2012 +1200 summary: Bug 610713. Disable acceleration in popup widgets to work around Windows/driver bugs. r=bas The only potential Dupe filed since landing on MC would be Bug 764161, so I don't know if an Uplifting of a Backout to Aurora/Beta would be feasible/justifiable.
Comment 4•10 years ago
|
||
I'm fine with backing out bug 610713.
Assignee | ||
Comment 5•10 years ago
|
||
Assignee: nobody → roc
Comment 6•10 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/ad006bd70b37
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla16
Assignee | ||
Updated•10 years ago
|
status-firefox14:
--- → affected
status-firefox15:
--- → affected
tracking-firefox14:
--- → ?
tracking-firefox15:
--- → ?
Assignee | ||
Comment 7•10 years ago
|
||
Comment on attachment 636079 [details] [diff] [review] backout patch Review of attachment 636079 [details] [diff] [review]: ----------------------------------------------------------------- Simple backout.
Attachment #636079 -
Flags: approval-mozilla-beta?
Attachment #636079 -
Flags: approval-mozilla-aurora?
Assignee | ||
Comment 8•10 years ago
|
||
Comment on attachment 636079 [details] [diff] [review] backout patch Review of attachment 636079 [details] [diff] [review]: ----------------------------------------------------------------- Simple backout. The patch didn't help anything, and it caused this bug, so we should just back it out.
Comment 9•10 years ago
|
||
Comment on attachment 636079 [details] [diff] [review] backout patch [Triage Comment] Backout to a known state. Approved for branches.
Attachment #636079 -
Flags: approval-mozilla-beta?
Attachment #636079 -
Flags: approval-mozilla-beta+
Attachment #636079 -
Flags: approval-mozilla-aurora?
Attachment #636079 -
Flags: approval-mozilla-aurora+
Updated•10 years ago
|
Assignee | ||
Comment 10•10 years ago
|
||
https://hg.mozilla.org/releases/mozilla-aurora/rev/d2329f2b08da https://hg.mozilla.org/releases/mozilla-beta/rev/8cb10eb889dc
![]() |
Reporter | |
Comment 11•10 years ago
|
||
This is now verified working against Mozilla/5.0 (Windows NT 6.1; WOW64; rv:16.0) Gecko/16.0 Firefox/16.0 ID:20120629030530 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:15.0) Gecko/20120629 Firefox/15.0a2 ID:20120629042007 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:14.0) Gecko/20100101 Firefox/14.0 ID:20120628060610
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•