Bug 761034. Backout patch for bug 610713 since it didn't fix anything and caused regressions. r=bas

--HG--
extra : rebase_source : ad006bd70b373d52d921aa5fdcf3a6b4b0cb1fb1